--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "test": "test",
     "cli": "node lib/index.js",
-    "build": "npx tsc"
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -38,6 +38,7 @@
     "typescript": "^4.4.3"
   },
   "dependencies": {
+    "@octokit/auth-token": "^2.5.0",
     "isomorphic-git": "^1.10.0",
     "ora": "^5.4.0",
     "yargs": "^16.1.1"
